# 4WISMPC-movebase

./: Readme.md
src/car_model/: CMakeLists.txt  package.xml
src/car_model/config/: smart_control_config.yaml  speed_distribution_node.yaml
src/car_model/include/: four_wheeldrive.h
src/car_model/launch/: amcl.launch  car_model_gazebo_museum.launch  car_model_simulation_museum.launch  control.launch  spawn_car.launch  spawn_xacro.launch
src/car_model/launch/simplelaunch/: control.launch  start.launch
src/car_model/maps/iscas_museum/: ISCAS_Museum.pgm  map.pgm  map.yaml
src/car_model/maps/iscas_museum/path/: pos_607.json
src/car_model/maps/iscas_museum/position/: pos_607.json
src/car_model/rviz/: car_model_navigation.rviz
src/car_model/rviz/simplerviz/: car_model_navigation.rviz
src/car_model/scripts/: cmdvel2gazebo.py  gazebo_odom_publisher.py  teleop_twist_keyboard.py
src/car_model/src/: four_wheeldrive.cpp  twist_sub.cpp
src/car_model/urdf/: four_wheeldrive.cpp  smart.xacro  smart_A.xacro
src/car_model/world/: hamsterworld.world
src/car_model/world/hamsterworld/: model.config  model.sdf
src/mpc_local_planner/: CMakeLists.txt  mpc_local_planner_plugin.xml  package.xml
src/mpc_local_planner/include/mpc_local_planner/: control_limits.hpp  mpc_local_planner.hpp  planner_utils.hpp
src/mpc_local_planner/include/mpc_local_planner/nmpc_core/: diffmpc.hpp
src/mpc_local_planner/param/: mpc_local_planner_params.yaml
src/mpc_local_planner/src/: control_limits.cpp  diffmpc.cpp  mpc_local_planner.cpp  planner_utils.cpp
src/mpc_local_planner/test/: test_control_limits.cpp  test_diffmpc_reference.cpp  test_planner_utils.cpp
src/mpc_move_base/: CMakeLists.txt  package.xml
src/mpc_move_base/launch/: amcl.launch  movebase.launch  movebasestart.launch  slam_gmapping.launch
src/mpc_move_base/maps/: hamstermaps.pgm  hamstermaps.yaml
src/mpc_move_base/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
src/nmpc_4wisnew2/: CMakeLists.txt  package.xml
src/nmpc_4wisnew2/include/nmpc_4wisnew2/: diffmpc.hpp
src/nmpc_4wisnew2/launch/: nmpc_4wisnew2_tracking.launch
src/nmpc_4wisnew2/src/: diffmpc.cpp  main.cpp  nmpc_4wisnew2_controller_node.cpp
src/reference_path_publisher/: CMakeLists.txt  package.xml
src/reference_path_publisher/launch/: car_model_with_ref_path.launch  ref_path.launch
src/reference_path_publisher/rviz/: car_model_with_ref_path.rviz  ref_path.rviz
src/reference_path_publisher/src/: ref_path_publisher.cpp
